[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md2html-tailwind4"
version = "1.0.0"
description = "A Python package that converts Markdown to HTML using Tailwind CSS 4 for styling."
authors = [
    { name = "White Neuron Co., Ltd.", email = "contact@whiteneuron.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["markdown", "html", "tailwind", "tailwindcss", "converter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "markdown>=3.10.2",
]

[project.scripts]
md2html = "md2html_tailwind4.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/md2html_tailwind4"]
